--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,8 @@
 {
     "require": {
         "apigen/apigen": " 4.0.1",
+        "sebastian/phpcpd": "2.0.1",
+        "phploc/phploc": "2.1.0",
         "phpmd/phpmd": " 2.2.1",
         "phpunit/phpunit": " 4.4.5",
         "squizlabs/php_codesniffer": "2.3.0"
