--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,10 @@
 {
     "require": {
-        "apigen/apigen": " 4.1.1",
-        "sebastian/phpcpd": "2.0.2",
-        "phploc/phploc": "2.1.3",
-        "phpmd/phpmd": " 2.2.3",
-        "phpunit/phpunit": " 4.7.6",
-        "squizlabs/php_codesniffer": "2.3.3"
+        "apigen/apigen": " 4.1.*",
+        "sebastian/phpcpd": "2.0.*",
+        "phploc/phploc": "2.1.*",
+        "phpmd/phpmd": " 2.2.*",
+        "phpunit/phpunit": " 4.7.*",
+        "squizlabs/php_codesniffer": "2.3.*"
     }
 }
