--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
         "sebastian/phpcpd": "2.0.*",
         "phploc/phploc": "2.1.*",
         "phpmd/phpmd": " 2.3.*",
-        "phpunit/phpunit": " 4.8.*",
+        "phpunit/phpunit": ">=4.8.16",
         "squizlabs/php_codesniffer": "2.3.*"
     }
 }
